<resources>
    <string name="app_name">ScyScannerApplication_V2</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="flights">Flights</string>
    <string name="car_rent">Car rent</string>
    <string name="hotel_book">Hotel book</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="other">Other</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="outbound_location">Outbound location</string>
    <string name="inbound_location">Inbound location</string>
    <string name="outbound_date">Outbound date</string>
    <string name="inbound_date">Inbound date</string>
    <string name="search">Search</string>
    <string name="inbound_switch_text">Inbound</string>
    <string name="currency">Currency</string>
    <string name="market_country">Market country</string>
    <string name="language">Language*</string>
    <string name="submit_button">Submit</string>

    <string name="unsupport_dialog">The ScyScanner is currently not supporting Live Pricing. So, we must use referral links now.
    We are sorry for this inconvenience.</string>
    <string name="settings_dialog">If you want to change settings the Language field is REQUIRED!</string>
    <string name="temroray_problem">We currently have some issues with Live Pricing of Tickets, so we must use referral links. That\'s a temporary problem. Thank you for your patience!</string>
    <string name="welcome_2">Feel free to use Make Your Trip application.</string>
    <string name="welcome_1">Welcome!</string>

</resources>
